--- a/index.html
+++ b/index.html
@@ -1,26 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
+    <link rel="prefetch" href="//www.gstatic.com/">
+    <link rel="dns-prefetch" href="//www.gstatic.com/">
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Train Scheduler</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="assets/css/styles.css">
+    <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
     <link rel="author" content="Dylan Burkey">
-    <style>
-        .container {
-            background: #e6e7e8;
-            margin: 1em auto;
-            min-height: 100%;
-        }
 
-        .panel {
-            width: 100%;
-        }
-    </style>
 </head>
 <body>
   <!--  <div class="container">
@@ -39,26 +34,30 @@
     </div> -->
 
     <div class="container">
-            <div class="row text-center">
-                 <div class="jumbotron">
-                    <h1>Anytime is Train Time</h1>
-                    <p>Choo Choo. Chee Chee.</p>
-                  </div>
-            </div>
+        <header role="banner">
+            <h1 class="site-title">train schedule</h1>
+            <h2 class="site-title--sub">who needs flight</h2>
+        </header>
             <div class="row">
                 <div class="panel panel-primary">
                     <div class="panel-heading">Current Train Schedule</div>
                           <div class="panel-body">
-                              <table class="table" id="display">
-                                <tr>
-                                    <th>Train Name</th>
-                                    <th>Destination</th>
-                                    <th>Frequency (min)</th>
-                                    <th>Next Arrival</th>
-                                    <th>Minutes Away</th>
-                                </tr>
+                              <table class="table table-hover table-dark mt-5">
+                                  <thead>
+                                    <tr>
+                                        <th>Train Name</th>
+                                        <th>Destination</th>
+                                        <th>Frequency/(min)</th>
+                                        <th>Next Arrival</th>
+                                        <th>Minutes Away</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="train-schedule">
+
+                                </tbody>
                               </table>
                           </div>
+    
                 </div>
             </div>
             <!-- /.row -->
@@ -92,7 +91,7 @@
         </div>
         
 </body>
-<script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
+
 <script src="assets/js/moment.js"></script>
 <script src="assets/js/app.js" type="text/javascript"></script> 
 
